# Change log for DateTime::Format::Builder

---
version: 0.62
date:    15 Apr 2003
changse:
    - Fixed erroneous call to on_fail()
    - Added 'verbose' debugging capability.

---
version: 0.60
date:    12 Apr 2003
changes:
    - Fixed missing '\' from a few '\d' in the docs.
    - Added ICal.pm example.
    - Added import() feature, to save lots of typing.
    - Completely revised documentation.
    - croak is same length is given twice.
    - Assorted refactoring, retouching.

---
version: 0.25
date:    29 Mar 2003
changes:
    - Minor code cleanups.
    - Bug fix; 'extra' params were being ignored.
    - Doc fix; 'extra' params with 0 are not recommended.

---
version: 0.24
date:    25 Mar 2003
changes:
    - First release!
    - Split POD into separate file.
    - Preprocess option for method building works.
    - Postprocess option per parser works.
    - Specification lists can now have coderefs in there.

---
version: 0.23
date:    25 Mar 2003
changes:
    - Improved ancillary files.
    - Added basic use case test for new classes.
    - Assorted API changes.
    - create_class infers package name.
    - also creates specified methods rather than assumed ones.
    - Assorted POD updates. Still not complete.
    - Rejigged to only have an array of hashrefs. Simpler.
    - No inference of length/key stuff.
    - zero is now extra and is thus semantically different.
    - Preliminary pre/post processing per parser provided.

---
version: 0.22
date:    21 Mar 2003
changes:
    - Initial (pre-actual release) version.
